--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
@@ -24,16 +25,18 @@
 
 </head>
   <body ng-app= "app">
-  <div class="wrapper" ng-controller="LoginController">
-    <form class="form-signin" action = "/login" method="POST">       
+  <div class="wrapper" ng-controller="loginCtrl">
+    <form class="form-signin" >       
       <h2 class="form-signin-heading"> Twitter!</h2>
-      <input  type="text" class="form-control" name="username" placeholder="Email Address" autofocus="" />
-      <input  type="password" class="form-control" name="password" placeholder="Password" />      
+      <p id="loginInfo">{{loginInfo}}</p>
 
-      <button class="btn btn-lg btn-primary btn-block form-control" type = "submit">Login</button> 
+      <input  type="text" class="form-control" ng-model="login.username" placeholder="User name" autofocus="" />
+      <input  type="password" class="form-control" ng-model="login.password" placeholder="Password" />      
+      <button class="btn btn-lg btn-primary btn-block form-control" ng-click = "login()">Login</button> 
       <h6 style="margin-left: 153px"> or </h6>
       <button class="btn btn-lg btn-primary btn-block form-control" ng-click="signUpButton()"> Sign Up </button> 
     </form>
+
   </div>
 </body>
 </html>
