--- a/public/signUp.html
+++ b/public/signUp.html
@@ -8,14 +8,12 @@
 
 <title> TwitterClone </title>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
-    <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.3.0.js"></script>
+
+
+
+
+
+
     <script src="app.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 <link rel="stylesheet" href="loginPageCSS.css">
@@ -30,12 +28,13 @@
             <h3 class="modal-title">Sign up to TwitterClone!</h3>
         </div>
     <div class="modal-body">
+    <p id="adduserInfo">{{adduserInfo}}</p>
         <p> Full name </p>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" ng-model = "adduser.username">
         <p> Email Address </p>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" ng-model = "adduser.email">
         <p> Password </p>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" ng-model = "adduser.password">
     </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
