search/add/get finished?

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <div class="col-md-6"> 
       <p>News Feed Column </p>
       <div class="container">
-        <textarea class="form-control" rows="3" placeholder="Write a tweet." ng-model = "contents"></textarea>
+        <textarea class="form-control" rows="3" placeholder="Write a tweet." ng-model = "tweet"></textarea>
         <button type="button" id="tweetButton" class="btn btn-outline-primary" ng-click = "additem()"> Tweet </button>
       </div>
       <hr>
