--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,9 @@
   </div>
 </div>
  <nav class="navbar navbar-default">
-<input type="text" placeholder="Search Tweets" ng-model="searchTweet">
+<input type="text" placeholder="Search Tweets Timestamp" ng-model="searchTweet">
+<input type="text" placeholder="Search Tweets limit" ng-model="searchLimit">
+
 <button type="button" class= "btn btn-outline-secondary" ng-click = "logout()"> Log Out </button>
 <button type="button" class= "btn btn-outline-secondary" ng-click = "searchTweets()"> Search! </button>
 
